# pureboot

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.agent  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
bootloaders/: README.md  grubx64.efi
bootloaders/bios/: undionly.kpxe
bootloaders/uefi/: ipxe.efi
deploy/: arm64-init.sh  build-arm64-deploy-image.sh  build-deploy-image.sh
deploy/scripts/: pureboot-clone-source-direct.sh  pureboot-clone-source-staged.sh  pureboot-clone-target-direct.sh  pureboot-clone-target-staged.sh  pureboot-cloud-init.sh  pureboot-common-arm64.sh  pureboot-common.sh  pureboot-disk-scan.sh  pureboot-partition-ops.sh  pureboot-partition.sh  pureboot-pending.sh  pureboot-pi-deploy.sh  pureboot-pi-image.sh  pureboot-pi-nfs.sh  pureboot-raspios-config.sh
docker/ipxe-builder/: Dockerfile
docs/: PureBoot_Product_Requirements_Document.md  README.md
docs/api/: README.md
docs/architecture/: README.md
docs/guides/: README.md  raspberry-pi-network-boot.md
docs/integrations/: README.md  (+1 more)
frontend/: index.html  package.json  tailwind.config.js  vite.config.ts
migrations/: README.md
scripts/: build-ipxe.sh  build-uki.sh  convert-vm-disk.sh  setup-deploy-env.sh  setup.sh
src/: __init__.py  main.py
systemd/: pureboot.service
tests/: conftest.py
workflows/: clone-source-direct.yaml  clone-source-staged.yaml  clone-target-direct.yaml  clone-target-staged.yaml  clone-target.yaml  partition-management.yaml  pi-diskless-nfs.yaml  pi-k3s-worker.yaml  pi-raspios-lite.yaml  pi-ubuntu-arm64.yaml
(+359 files in other folders)
